--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,151 @@
-<title>Chat App</title>
-<h1>Chat App</h1>
-<b>Welcome</b>
-<h6>Registered users: {{ count }}</h6>
+{% extends "layout.html" %} {% block title %}Dashboard{% endblock %} {% block
+content %}
+<div class="container">
+  {% with messages = get_flashed_messages(with_categories=true) %} {% if
+  messages %} {% for category, message in messages %}
+  <div class="alert alert-{{ category }}" role="alert">{{ message }}</div>
+  {% endfor %} {% endif %} {% endwith %}
+  <div class="row">
+    <div class="col-4 my-5">
+      <h6>Registered users: {{ count }}</h6>
+    </div>
+    <div class="col-8">
+      <div class="container my-5">
+        <ul class="nav nav-tabs" id="authTabs" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button
+              class="nav-link active"
+              id="register-tab"
+              data-bs-toggle="tab"
+              data-bs-target="#register"
+              type="button"
+              role="tab"
+              aria-controls="register"
+              aria-selected="true"
+            >
+              Register
+            </button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button
+              class="nav-link"
+              id="login-tab"
+              data-bs-toggle="tab"
+              data-bs-target="#login"
+              type="button"
+              role="tab"
+              aria-controls="login"
+              aria-selected="false"
+            >
+              Log in
+            </button>
+          </li>
+        </ul>
 
-<h3>Register</h3>
-<form action="/register" method="POST">
-  <label for="registerUsername">Username</label>
-  <input type="text" name="username" id="registerUsername" required />
-  <label for="registerPassword">Password</label>
-  <input type="password" name="password" id="registerPassword" required />
-  <label for="registerConfirmPassword">Confirm password</label>
-  <input
-    type="password"
-    name="confirm_password"
-    id="registerConfirmPassword"
-    required
-  />
-  <input type="checkbox" name="role" id="registerAdminCheck" />
-  <label for="registerAdminCheck">Admin</label>
-  <button type="submit">Submit</button>
-</form>
+        <div class="tab-content">
+          <div
+            class="tab-pane fade show active"
+            id="register"
+            role="tabpanel"
+            aria-labelledby="register-tab"
+          >
+            <div class="form-container">
+              <h3>Register</h3>
+              <form id="registerForm" action="/register" method="POST">
+                <div class="mb-3">
+                  <label for="registerUsername" class="form-label"
+                    >Username</label
+                  >
+                  <input
+                    type="text"
+                    name="username"
+                    class="form-control"
+                    id="registerUsername"
+                    required
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="registerPassword" class="form-label"
+                    >Password</label
+                  >
+                  <input
+                    type="password"
+                    name="password"
+                    class="form-control"
+                    id="registerPassword"
+                    required
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="registerConfirmPassword" class="form-label"
+                    >Confirm password</label
+                  >
+                  <input
+                    type="password"
+                    name="confirm_password"
+                    class="form-control"
+                    id="registerConfirmPassword"
+                    required
+                  />
+                </div>
+                <div class="mb-3 form-check">
+                  <input
+                    type="checkbox"
+                    name="role"
+                    class="form-check-input"
+                    id="registerAdminCheck"
+                  />
+                  <label class="form-check-label" for="registerAdminCheck"
+                    >Admin</label
+                  >
+                </div>
+                <div class="text-center">
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+              </form>
+            </div>
+          </div>
+
+          <div
+            class="tab-pane fade"
+            id="login"
+            role="tabpanel"
+            aria-labelledby="login-tab"
+          >
+            <div class="form-container">
+              <h3>Log in</h3>
+              <form action="/login" method="POST">
+                <div class="mb-3">
+                  <label for="loginUsername" class="form-label">Username</label>
+                  <input
+                    type="text"
+                    name="username"
+                    class="form-control"
+                    id="loginUsername"
+                    required
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="loginPassword" class="form-label">Password</label>
+                  <input
+                    type="password"
+                    name="password"
+                    class="form-control"
+                    id="loginPassword"
+                    required
+                  />
+                </div>
+                <div class="text-center">
+                  <button type="submit" class="btn btn-primary">Log in</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <script>
   document.querySelector("form").addEventListener("submit", function (event) {
@@ -34,3 +160,4 @@
     }
   });
 </script>
+{% endblock %}
