Add dashboard view, update styles

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@ content %}
   {% endfor %} {% endif %} {% endwith %}
   <div class="row">
     <div class="col-4 my-5">
-      <h6>Registered users: {{ count }}</h6>
+      <img src="/static/cat.jpg" alt="Cat" width="450px" />
     </div>
     <div class="col-8">
       <div class="container my-5">
