--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,3 @@
-html, body {
-    background-color: #f5f5f5;
-}
-
 h1, h2, h3 {
     color: #36454F;
     text-align: center;
@@ -19,6 +15,7 @@ a:hover {
 
 footer {
     text-align: center;
+    padding: 20px;
 }
 
 .btn-primary, .btn-primary:hover {
@@ -39,8 +36,8 @@ footer {
     max-width: 70%;
 }
 
-.nav-tabs .nav-link {
-    border: none;
+.nav-tabs {
+    border-bottom: none;
 }
 
 .nav-link, .nav-link:hover {
@@ -49,9 +46,31 @@ footer {
 
 .header {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 10px 20px;
-    background-color: #f5f5f5;
     position: relative;
+}
+
+.card {
+    border: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    min-width: 200px;
+}
+
+.rounded-circle {
+    background-color: pink !important;
+}
+
+.dropdown-menu {
+    border: none;
+}
+
+.dropdown-custom, .dropdown-custom:hover, .dropdown-custom:focus {
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+    color: #36454F;
+}
+
+.card-footer {
+    background-color: transparent;
 }
