--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,33 +12,76 @@
     />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="{{ url_for('static', filename='styles.css') }}"
     />
   </head>
   <body>
-    <header class="header">
-      <div class="container">
-        <h1>Chat App</h1>
+    <header class="header py-3">
+      <div class="container d-flex justify-content-between align-items-center">
+        <div class="flex-grow-1 text-center">
+          <h1><b>Cat</b>C<i>h</i>at</h1>
+        </div>
+        {% if session.username %}
+        <div class="dropdown">
+          <button
+            class="btn btn-secondary dropdown-toggle d-flex align-items-center dropdown-custom"
+            type="button"
+            id="dropdownMenuButton"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            <div
+              class="rounded-circle bg-secondary d-flex justify-content-center align-items-center"
+              style="width: 40px; height: 40px"
+            >
+              <i class="fas fa-thin fa-cat text-white"></i>
+            </div>
+            <span class="ms-2">{{ session.username }}</span>
+          </button>
+          <ul
+            class="dropdown-menu dropdown-menu-end"
+            aria-labelledby="dropdownMenuButton"
+          >
+            <li>
+              <div class="card p-3">
+                <div class="d-flex align-items-center">
+                  <div
+                    class="rounded-circle bg-secondary d-flex justify-content-center align-items-center"
+                    style="width: 60px; height: 60px"
+                  >
+                    <i class="fas fa-thin fa-cat fa-xl text-white"></i>
+                  </div>
+                  <div class="ms-3">
+                    <h5 class="card-title mb-0">{{ session.username }}</h5>
+                    <p class="card-text text-muted" style="font-size: 0.9em">
+                      Role: {{ session.role }}
+                    </p>
+                  </div>
+                </div>
+                <div class="card-footer text-center mt-2">
+                  <a href="/logout" class="btn btn-primary btn-sm">Log Out</a>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        {% endif %}
       </div>
     </header>
 
     {% block content %}{% endblock %}
 
-    <hr />
-    <footer>Tietokannat ja web-ohjelmointi 2024</footer>
+    <footer class="footer fixed-bottom">
+      <hr />
+      Tietokannat ja web-ohjelmointi 2024
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
   </body>
