--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -80,6 +80,19 @@
             />
             <label class="form-check-label" for="private">Private</label>
           </div>
+          <div class="mb-3" id="userSelectContainer" style="display: none">
+            <label for="users" class="form-label"
+              >Select users to give access to</label
+            >
+            <select id="users" name="users" class="form-select" multiple>
+              {% for user in users %}
+              <option value="{{ user.user_id }}">{{ user.username }}</option>
+              {% endfor %}
+            </select>
+            <small class="form-text text-muted">
+              Hold down the Ctrl or ⌘ button to select multiple users.
+            </small>
+          </div>
         </form>
       </div>
       <div class="modal-footer">
@@ -94,6 +107,15 @@
   </div>
 </div>
 <script>
+  document.getElementById("private").addEventListener("change", function () {
+    const userSelectContainer = document.getElementById("userSelectContainer");
+    if (this.checked) {
+      userSelectContainer.style.display = "block";
+    } else {
+      userSelectContainer.style.display = "none";
+    }
+  });
+
   document
     .getElementById("saveCategoryBtn")
     .addEventListener("click", function (event) {
@@ -101,10 +123,15 @@
 
       const title = document.getElementById("title").value;
       const isPrivate = document.getElementById("private").checked;
+      const selectedUsers = Array.from(
+        document.getElementById("users").selectedOptions
+      ).map((option) => option.value)
+      .filter(userId => userId);
 
       const data = {
         title: title,
         private: isPrivate,
+        users: selectedUsers,
       };
 
       fetch("/create-category", {
