--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,19 +18,31 @@
         <th scope="col">Threads</th>
         <th scope="col">Messages</th>
         <th scope="col">Last Message</th>
+        <th scope="col"><i class="fa-solid fa-trash-can"></i></th>
       </tr>
     </thead>
     <tbody>
       {% for category in categories %}
       <tr>
         <td>
-          <a href="{{ url_for('category_page', category_id=category['category_id']) }}">{{ category['category_name'] }}</a>
+          <a
+            href="{{ url_for('category_page', category_id=category['category_id']) }}"
+            >{{ category['category_name'] }}</a
+          >
         </td>
         <td>{{ category.thread_count }}</td>
         <td>{{ category.message_count }}</td>
         <td>
           {{ category.last_message_timestamp.strftime('%Y-%m-%d %H:%M:%S') if
           category.last_message_timestamp else 'No messages yet' }}
+        </td>
+        <td>
+          <button
+            class="btn btn-dark btn-sm delete-category"
+            data-category-id="{{ category['category_id'] }}"
+          >
+            Delete
+          </button>
         </td>
       </tr>
       {% endfor %}
@@ -125,8 +137,9 @@
       const isPrivate = document.getElementById("private").checked;
       const selectedUsers = Array.from(
         document.getElementById("users").selectedOptions
-      ).map((option) => option.value)
-      .filter(userId => userId);
+      )
+        .map((option) => option.value)
+        .filter((userId) => userId);
 
       const data = {
         title: title,
@@ -153,6 +166,32 @@
           console.error("Error:", error);
         });
     });
+
+  document.querySelectorAll(".delete-category").forEach(function (button) {
+    button.addEventListener("click", function (event) {
+      const categoryId = this.getAttribute("data-category-id");
+
+      if (confirm("Are you sure you want to delete this category?")) {
+        fetch(`/delete-category/${categoryId}`, {
+          method: "PATCH",
+          headers: {
+            "Content-Type": "application/json",
+          },
+        })
+          .then((response) => response.json())
+          .then((data) => {
+            if (data.success) {
+              location.reload();
+            } else {
+              alert("Error deleting category");
+            }
+          })
+          .catch((error) => {
+            console.error("Error:", error);
+          });
+      }
+    });
+  });
 </script>
 {% else %}
 <p>You have to log in to see this page.</p>
