--- a/static/styles.css
+++ b/static/styles.css
@@ -74,3 +74,19 @@ footer {
 .card-footer {
     background-color: transparent;
 }
+
+.threads-header a {
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+.threads-list {
+    border-right: 1px solid #ccc;
+    padding-right: 20px;
+    height: 60vh;
+}
+
+.no-threads {
+    text-align: center;
+    margin-top: 150px;
+}
