--- a/templates/category.html
+++ b/templates/category.html
@@ -1,1 +1,44 @@
-<h1>Welcome to {{ category.title }}</h1>
+{% extends "layout.html" %} {% block content %} {% if session.username %}
+
+<div class="container">
+  <div class="row">
+    <div class="col-4 my-5">
+      <div class="threads-list">
+        <div class="threads-header">
+          <a href="/dashboard">
+            <i class="fas fa-arrow-left"></i> Back to Categories
+          </a>
+          <button type="button" class="btn btn-primary ms-4">
+            Create New Thread
+          </button>
+        </div>
+        <div class="list-group">
+          {% if threads %} {% for thread in threads %}
+          <a
+            href="/thread/{{ thread.id }}"
+            class="list-group-item list-group-item-action {% if selected_thread and selected_thread.id == thread.id %}active{% endif %}"
+          >
+            <div>{{ thread.title }}</div>
+            <div>{{ thread.message_count }} messages</div>
+          </a>
+          {% endfor %} {% else %}
+          <div class="no-threads">
+            <p>No threads yet.</p>
+          </div>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+    <div class="col-8">
+      <div class="container my-5">
+        {% if selected_thread %}
+        <h2>{{ selected_thread.title }}</h2>
+        {% else %}
+        <!-- TODO: open first thread from the list -->
+        <h1>{{ category.title }}</h1>
+        {% endif %}
+      </div>
+    </div>
+  </div>
+</div>
+{% endif %} {% endblock %}
