--- a/templates/category.html
+++ b/templates/category.html
@@ -19,7 +19,7 @@ with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
     </div>
   </div>
   <div class="row my-5">
-    <div class="col-4">
+    <div class="col-3">
       <div class="threads-list">
         <button
           type="button"
@@ -37,7 +37,7 @@ with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
             class="list-group-item list-group-item-action {% if selected_thread and selected_thread.id == thread.id %}active{% endif %}"
           >
             <div>{{ thread.title }}</div>
-            <div>{{ thread.message_count }} messages</div>
+            <div>{{ thread.message_count }} message(s)</div>
           </a>
           {% endfor %} {% else %}
           <div class="no-threads">
@@ -47,9 +47,31 @@ with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
         </div>
       </div>
     </div>
-    <div class="col-8">
+    <div class="col-9">
       <div class="container">
-        <h2>{{ selected_thread.title }}</h2>
+        <h2 class="mb-5">{{ selected_thread.title }}</h2>
+
+        <div class="message-item">
+          <p>
+            <strong>{{ selected_thread.creator }}</strong> {{
+            selected_thread.content }}
+          </p>
+          <p><small>{{ selected_thread.created_at }}</small></p>
+          <hr />
+        </div>
+
+        <div class="messages-list mt-4">
+          {% if messages_in_thread %} {% for message in messages_in_thread %}
+          <div class="message-item">
+            <p>
+              <strong>{{ message.creator }}</strong> {{ message.content }}
+            </p>
+            <p><small>{{ message.created_at }}</small></p>
+            <hr />
+          </div>
+          {% endfor %}
+          {% endif %}
+        </div>
       </div>
     </div>
   </div>
