--- a/templates/category.html
+++ b/templates/category.html
@@ -46,17 +46,9 @@ with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
                 </div>
               </div>
             </a>
-            {% if thread.user_id == session.user_id %}
-            <div class="ms-3">
-              <button
-                class="btn btn-dark btn-sm delete-thread"
-                data-thread-id="{{ thread.id }}"
-              >
-                Delete
-              </button>
-            </div>
 
-            {% endif %}
+            
+
           </div>
           {% endfor %} {% else %}
           <div class="no-threads">
@@ -68,8 +60,25 @@ with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
     </div>
     <div class="col-9">
       <div class="container">
-        <h2 class="mb-5">{{ selected_thread.title }}</h2>
+        <div class="d-flex justify-content-between align-items-center">
+          <h2 class="mb-5 mx-auto">{{ selected_thread.title }}</h2>
 
+          {% if selected_thread.user_id == session.user_id %}
+          <button
+            type="button"
+            id="edit-button"
+            class="btn btn-sm btn-link mb-5"
+          >
+            <i class="fas fa-edit fa-xl grey-icon"></i>
+          </button>
+            <button
+              class="btn btn-sm btn-link delete-thread mb-5 ms-2"
+              data-thread-id="{{ selected_thread.id }}"
+            >
+            <i class="fas fa-trash fa-xl grey-icon"></i>
+            </button>
+          {% endif %}
+        </div>
         <div class="message-item">
           <p>
             <strong>{{ selected_thread.creator }}</strong> {{
