Add formatting for message dates

--- a/static/styles.css
+++ b/static/styles.css
@@ -104,3 +104,11 @@ footer {
 .grey-icon {
     color: grey;
 }
+
+.category-title {
+    margin-left: 50px;
+}
+
+.small {
+    font-size: smaller;
+}
