--- a/templates/category.html
+++ b/templates/category.html
@@ -77,7 +77,7 @@ with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
           {% endif %}
         </div>
         <div id="thread-content">
-          <div class="message-item">
+          <div class="message-item speech-bubble">
             <p>
               <strong>{{ selected_thread.creator }}</strong> {{
               selected_thread.content }} {% if selected_thread.last_modified %}
@@ -88,12 +88,11 @@ with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
               class="thread-date small"
               data-date="{{ selected_thread.created_at }}"
             ></p>
-            <hr />
           </div>
 
           <div class="messages-list mt-4">
             {% if messages_in_thread %} {% for message in messages_in_thread %}
-            <div class="message-item">
+            <div class="message-item speech-bubble">
               <p>
                 <strong>{{ message.creator }}</strong> {{ message.content }} {%
                 if message.last_modified %}
@@ -104,7 +103,6 @@ with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
                 class="thread-date small"
                 data-date="{{ message.created_at }}"
               ></p>
-              <hr />
             </div>
             {% endfor %} {% endif %}
           </div>
