--- a/static/styles.css
+++ b/static/styles.css
@@ -122,7 +122,7 @@ footer {
 .speech-bubble {
     background-color: #f1f1f1;
     border-radius: 20px;
-    padding: 15px;
+    padding: 15px 15px 0 15px;
     position: relative;
     max-width: 80%;
     display: inline-block;
