Add functionality for sending messages to threads and small style fixes

--- a/static/styles.css
+++ b/static/styles.css
@@ -15,7 +15,8 @@ a:hover {
 
 footer {
     text-align: center;
-    padding: 20px;
+    background-color: white;
+    height: 70px;
 }
 
 .btn-primary, .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
@@ -78,7 +79,7 @@ footer {
 .threads-list {
     border-right: 1px solid #ccc;
     padding-right: 20px;
-    height: 60vh;
+    height: 65vh;
 }
 
 .no-threads {
@@ -122,8 +123,43 @@ footer {
 .speech-bubble {
     background-color: #f1f1f1;
     border-radius: 20px;
-    padding: 15px 15px 0 15px;
+    padding: 15px 15px 5px 15px;
     position: relative;
-    max-width: 80%;
+    min-width: 51%;
+    max-width: 85%;
     display: inline-block;
+    margin-bottom: 12px;
+}
+
+.thread-content {
+    background-color: white;
+    border-radius: 10px;
+    border: black solid 1px;
+}
+
+.new-message-form {
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    padding: 10px 5px 20px 5px;
+}
+
+.new-message-form textarea {
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    width: 100%;
+    padding: 10px;
+    resize: none;
+}
+
+.new-message-form button {
+    margin-top: 10px;
+}
+
+.scrollable-container {
+    height: calc(100vh - 330px);
+    overflow-y: auto;
+    padding-right: 10px;
+    padding-bottom: 20px;
 }
