--- a/static/styles.css
+++ b/static/styles.css
@@ -125,8 +125,7 @@ footer {
     border-radius: 20px;
     padding: 15px 15px 5px 15px;
     position: relative;
-    min-width: 51%;
-    max-width: 85%;
+    min-width: 60%;
     display: inline-block;
     margin-bottom: 12px;
 }
@@ -134,7 +133,7 @@ footer {
 .thread-content {
     background-color: white;
     border-radius: 10px;
-    border: black solid 1px;
+    border: grey solid 1px;
 }
 
 .new-message-form {
@@ -162,4 +161,14 @@ footer {
     overflow-y: auto;
     padding-right: 10px;
     padding-bottom: 20px;
+}
+
+.kebab-menu {
+    position: absolute;
+    top: 10px;
+    right: 12px;
+}
+
+.message-sent {
+    margin-left: 40%;
 }
