Add success messages for successful message edits and deletions

--- a/templates/messages.html
+++ b/templates/messages.html
@@ -170,6 +170,7 @@
               `#message-${messageId}`
             );
             messageElement.remove();
+            location.reload();
           } else {
             alert("Error deleting the message.");
           }
