--- a/static/styles.css
+++ b/static/styles.css
@@ -174,3 +174,46 @@ footer {
 .message-sent {
     margin-left: 40%;
 }
+
+.search-icon {
+    color: grey;
+    font-size: 20px;
+    margin-left: 5px;
+}
+
+.search-input {
+    position: relative;
+    padding: 12px 14px;
+    border: 1px solid #dee2e6;
+    border-radius: 20px;
+    border-left: none;
+    outline: none;
+}
+
+.search-input::placeholder {
+    color: grey;
+    opacity: 0.8;
+}
+
+.input-group-text {
+    border-radius: 20px;
+    border-right: none;
+    background-color: white;
+}
+
+.discussion-header {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 58px;
+}
+
+.input-group {
+    position: absolute;
+    transform: translateX(75%);
+}
+
+.header-container {
+    position: relative;
+    padding: 20px;
+}
