--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,6 +1,25 @@
 {% extends "layout.html" %} {% block content %} {% if session.username %}
 <div class="container my-5">
-  <h2>Discussion Categories</h2>
+  <div
+    class="d-flex justify-content-between align-items-center header-container mb-5"
+  >
+    <h2 class="discussion-header">Discussion Categories</h2>
+    <div>
+      <div class="input-group">
+        <span class="input-group-text"
+          ><i class="fas fa-search search-icon"></i
+        ></span>
+        <input
+          type="text"
+          id="search-input"
+          class="search-input"
+          placeholder="Search messages"
+          aria-label="Search messages"
+        />
+      </div>
+      <div id="search-results-dropdown" class="dropdown-menu"></div>
+    </div>
+  </div>
   {% if session.role == 'admin' %}
   <button
     type="button"
