--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -16,8 +16,12 @@
           placeholder="Search messages"
           aria-label="Search messages"
         />
+
+        <div
+          id="search-results-dropdown"
+          class="dropdown-menu search-dropdown"
+        ></div>
       </div>
-      <div id="search-results-dropdown" class="dropdown-menu"></div>
     </div>
   </div>
   {% if session.role == 'admin' %}
@@ -208,6 +212,43 @@
           .catch((error) => {
             console.error("Error:", error);
           });
+      }
+    });
+  });
+
+  document.addEventListener("DOMContentLoaded", function () {
+    const searchInput = document.getElementById("search-input");
+    const searchResultsDropdown = document.getElementById(
+      "search-results-dropdown"
+    );
+
+    searchInput.addEventListener("input", function () {
+      const query = searchInput.value;
+
+      if (query.length >= 2) {
+        fetch(`/search-messages?query=${encodeURIComponent(query)}`)
+          .then((response) => response.json())
+          .then((data) => {
+            searchResultsDropdown.innerHTML = "";
+
+            if (data.length > 0) {
+              searchResultsDropdown.classList.add("show");
+              data.forEach((result) => {
+                const item = document.createElement("a");
+                item.className = "dropdown-item";
+                item.href = `/category/${result.category_id}/thread/${result.thread_id}?message_id=${result.message_id}`;
+                item.textContent = `${
+                  result.thread_title
+                } - ${result.message_content.substring(0, 15)}`;
+                searchResultsDropdown.appendChild(item);
+              });
+            } else {
+              searchResultsDropdown.classList.remove("show");
+            }
+          });
+      } else {
+        searchResultsDropdown.classList.remove("show");
+        searchResultsDropdown.innerHTML = "";
       }
     });
   });
